Primeros estilos al navbar

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
+    <title>YouTube</title>
 </head>
 <body>
-    
+    <nav class="flexNavBar">
+        <div class="navSection1">
+            <img src="images/menu.png" alt="sideMenu">
+            <img src="images/youtubeLogo.png" alt="youtubeLogo">
+        </div>
+
+        <div class="navSection2">
+
+        </div>
+
+        <div class="navSection3 flexNavBar">
+            <img src="images/upload.png" alt="uploadVideo">
+            <img src="images/more.png" alt="moreOptions">
+            <img src="images/notification.png" alt="notifications">
+            <img class="userIcon" src="images/userIcon.svg" alt="userIcon">
+        </div>
+    </nav>
 </body>
 </html>
