feat: ✨: NavBar desktop version

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 </head>
 <body>
     <nav class="flexNavBar">
-        <div class="navSection1">
-            <img src="images/menu.png" alt="sideMenu">
-            <img src="images/youtubeLogo.png" alt="youtubeLogo">
+        <div class="navSection1 flexNavBar">
+            <img class="menu" src="images/menu.png" alt="sideMenu">
+            <img class="youtubeLogo" src="images/youtubeLogo.png" alt="youtubeLogo">
         </div>
-
-        <div class="navSection2">
-
+        <div class="navSection2 flexNavBar">
+            <div class="searchBox flexNavBar">
+                <input type="text" placeholder="Search">
+                <img src="images/search.png" alt="searchIcon">
+            </div>
+            <img class="micIcon" src="images/voice-search.png" alt="voiceIcon">
         </div>
-
         <div class="navSection3 flexNavBar">
             <img src="images/upload.png" alt="uploadVideo">
             <img src="images/more.png" alt="moreOptions">
