--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>YouTube</title>
 </head>
 <body>
+    <!-- Navbar Structure -->
     <nav class="flexNavBar">
         <div class="navSection1 flexNavBar">
             <img class="menu" src="images/menu.png" alt="sideMenu">
@@ -28,5 +29,25 @@
             <img class="userIcon" src="images/userIcon.svg" alt="userIcon">
         </div>
     </nav>
+
+    <!-- Main content structure -->
+    <section>
+        <div class="sideBar">
+            <div class="shortcutsIcons">
+                <a href=""><img src="images/home.png" alt="homeIcon"><p>Home</p></a>
+                <a href=""><img src="images/explore.png" alt="exploreIcon"><p>Explore</p></a>
+                <a href=""><img src="images/subscriprion.png" alt="subscriprionIcon"><p>Subscription</p></a>
+                <a href=""><img src="images/library.png" alt="libraryIcon"><p>Library</p></a>
+                <a href=""><img src="images/history.png" alt="historyIcon"><p>History</p></a>
+                <a href=""><img src="images/playlist.png" alt="homeIcon"><p>Playlist</p></a>
+                <a href=""><img src="images/messages.png" alt="homeIcon"><p>Messages</p></a>
+                <a href=""><img src="images/show-more.png" alt="showMoreIcon"><p>Show More</p></a>
+            </div>
+        
+            <div>
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
