feat: ✨: Adding a banner for the main content

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                 <a href=""><img src="images/cameron.png" alt="showMoreIcon"><p>Cameron Diaz</p></a>   
             </div>
         </div>
+        <!--* Main content, banner and videos -->
+
+        <main class="mainContent">
+            <div class="bannerContainer">
+                <img src="./images/banner.png" alt="banner">
+            </div>
+
+        </main>
     </section>
 </body>
 </html>
