--- a/index.html
+++ b/index.html
@@ -62,11 +62,27 @@
         <!--* Main content, banner and videos -->
 
         <main class="mainContent">
+            <!-- Structure for the banner image -->
             <div class="bannerContainer">
                 <img src="./images/banner.png" alt="banner">
             </div>
 
+            <!-- structure for the videos section -->
+            <div class="videosContainer">
+                <div class="videoInfo">
+                    <img src="images/thumbnail1.png" alt="thumbnail1">
+                    <div class="flexNavBar">
+                        <img src="images/Jack.png" alt="channel1">
+                        <div>
+                            <a href="">How to improve your coding skills</a>
+                            <p>midudev</p>
+                            <p>154k 1 month</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
+
     </section>
 </body>
 </html>
