feat: 💄: Styles for videos section

--- a/index.html
+++ b/index.html
@@ -69,12 +69,96 @@
 
             <!-- structure for the videos section -->
             <div class="videosContainer">
-                <div class="videoInfo">
-                    <img src="images/thumbnail1.png" alt="thumbnail1">
+                <div class="videoCar">
+                    <a href=""><img class="thumbnail" src="images/thumbnail1.png" alt="thumbnail1"></a>
                     <div class="flexNavBar">
-                        <img src="images/Jack.png" alt="channel1">
-                        <div>
+                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <div class="videoInfo">
+                            <a href="">How to improve your coding skills at backend development</a>
+                            <p>midudev</p>
+                            <p>154k 1 month</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="videoCar">
+                    <a href=""><img class="thumbnail" src="images/thumbnail2.png" alt="thumbnail2"></a>
+                    <div class="flexNavBar">
+                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <div class="videoInfo">
                             <a href="">How to improve your coding skills</a>
+                            <p>midudev</p>
+                            <p>154k 1 month</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="videoCar">
+                    <a href=""><img class="thumbnail" src="images/thumbnail3.png" alt="thumbnail3"></a>
+                    <div class="flexNavBar">
+                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <div class="videoInfo">
+                            <a href="">How to improve your coding skills</a>
+                            <p>midudev</p>
+                            <p>154k 1 month</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="videoCar">
+                    <a href=""><img class="thumbnail" src="images/thumbnail4.png" alt="thumbnail4"></a>
+                    <div class="flexNavBar">
+                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <div class="videoInfo">
+                            <a href="">How to improve your coding skills</a>
+                            <p>midudev</p>
+                            <p>154k 1 month</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="videoCar">
+                    <a href=""><img class="thumbnail" src="images/thumbnail5.png" alt="thumbnail5"></a>
+                    <div class="flexNavBar">
+                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <div class="videoInfo">
+                            <a href="">How to improve your coding skills</a>
+                            <p>midudev</p>
+                            <p>154k 1 month</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="videoCar">
+                    <a href=""><img class="thumbnail" src="images/thumbnail6.png" alt="thumbnail6"></a>
+                    <div class="flexNavBar">
+                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <div class="videoInfo">
+                            <a href="">How to improve your coding skills</a>
+                            <p>midudev</p>
+                            <p>154k 1 month</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="videoCar">
+                    <a href=""><img class="thumbnail" src="images/thumbnail7.png" alt="thumbnail7"></a>
+                    <div class="flexNavBar">
+                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <div class="videoInfo">
+                            <a href="">How to improve your coding skills</a>
+                            <p>midudev</p>
+                            <p>154k 1 month</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="videoCar">
+                    <a href=""><img class="thumbnail" src="images/thumbnail8.png" alt="thumbnail8"></a>
+                    <div class="flexNavBar">
+                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <div class="videoInfo">
+                            <a href="">How to improve your coding skills dfdvevcrfvfffdfjbfhbhsbfhbsh</a>
                             <p>midudev</p>
                             <p>154k 1 month</p>
                         </div>
