Fixing hover in sidemenu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>YouTube</title>
 </head>
 <body>
-    <!-- Navbar Structure -->
+    <!--* Navbar Structure -->
     <nav class="flexNavBar">
         <div class="navSection1 flexNavBar">
             <img class="menu" src="images/menu.png" alt="sideMenu">
@@ -38,45 +38,45 @@
         <div class="sideBar">
             <!--* Structure for shortcuts at sidebar -->
             <div class="shortcutsIcons">
-                <a href=""><i class='bx bx-home-alt' style='color:#7c7878'></i><p>Home</p></a>
-                <a href=""><img src="images/explore.png" alt="exploreIcon"><p>Explore</p></a>
-                <a href=""><img src="images/subscriprion.png" alt="subscriprionIcon"><p>Subscription</p></a>
-                <a href=""><img src="images/library.png" alt="libraryIcon"><p>Library</p></a>
-                <a href=""><img src="images/history.png" alt="historyIcon"><p>History</p></a>
-                <a href=""><img src="images/playlist.png" alt="homeIcon"><p>Playlist</p></a>
-                <a href=""><img src="images/messages.png" alt="homeIcon"><p>Messages</p></a>
-                <a href=""><img src="images/show-more.png" alt="showMoreIcon"><p>Show More</p></a>
+                <a class="simdeMenu" href=""><i class='bx bx-home-alt' style='color:#7c7878'></i><p>Home</p></a>
+                <a class="simdeMenu" href=""><img src="images/explore.png" alt="exploreIcon"><p>Explore</p></a>
+                <a class="simdeMenu" href=""><img src="images/subscriprion.png" alt="subscriprionIcon"><p>Subscription</p></a>
+                <a class="simdeMenu" href=""><img src="images/library.png" alt="libraryIcon"><p>Library</p></a>
+                <a class="simdeMenu" href=""><img src="images/history.png" alt="historyIcon"><p>History</p></a>
+                <a class="simdeMenu" href=""><img src="images/playlist.png" alt="homeIcon"><p>Playlist</p></a>
+                <a class="simdeMenu" href=""><img src="images/messages.png" alt="homeIcon"><p>Messages</p></a>
+                <a class="simdeMenu" href=""><img src="images/show-more.png" alt="showMoreIcon"><p>Show More</p></a>
                 <hr>
             </div>
             
             <!--* Structure for subscribed channels  -->
             <div class="subscribedChanels">
                 <h3>SUBSCRIBED</h3>
-                <a href=""><img src="images/Jack.png" alt="showMoreIcon"><p>Joker</p></a>
-                <a href=""><img src="images/simon.png" alt="showMoreIcon"><p>Maradona</p></a>
-                <a href=""><img src="images/tom.png" alt="showMoreIcon"><p>Tom Cruise</p></a>
-                <a href=""><img src="images/megan.png" alt="showMoreIcon"><p>Megan Fox</p></a>
-                <a href=""><img src="images/cameron.png" alt="showMoreIcon"><p>Cameron Diaz</p></a>   
+                <a class="simdeMenu" href=""><img src="images/Jack.png" alt="showMoreIcon"><p>Joker</p></a>
+                <a class="simdeMenu" href=""><img src="images/simon.png" alt="showMoreIcon"><p>Maradona</p></a>
+                <a class="simdeMenu" href=""><img src="images/tom.png" alt="showMoreIcon"><p>Tom Cruise</p></a>
+                <a class="simdeMenu" href=""><img src="images/megan.png" alt="showMoreIcon"><p>Megan Fox</p></a>
+                <a class="simdeMenu" href=""><img src="images/cameron.png" alt="showMoreIcon"><p>Cameron Diaz</p></a>   
             </div>
         </div>
         <!--* Main content, banner and videos -->
 
         <main class="mainContent">
-            <!-- Structure for the banner image -->
+            <!--* Structure for the banner image -->
             <div class="bannerContainer">
                 <img src="./images/banner.png" alt="banner">
             </div>
 
-            <!-- structure for the videos section -->
+            <!--* structure for the videos section -->
             <div class="videosContainer">
                 <div class="videoCar">
                     <a href=""><img class="thumbnail" src="images/thumbnail1.png" alt="thumbnail1"></a>
                     <div class="flexNavBar">
-                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
                             <a href="">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
-                            <p>154k 1 month</p>
+                            <p>154k &bull; 1 month</p>
                         </div>
                     </div>
                 </div>
@@ -84,11 +84,11 @@
                 <div class="videoCar">
                     <a href=""><img class="thumbnail" src="images/thumbnail2.png" alt="thumbnail2"></a>
                     <div class="flexNavBar">
-                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills</a>
+                            <a href="">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
-                            <p>154k 1 month</p>
+                            <p>154k &bull; 1 month</p>
                         </div>
                     </div>
                 </div>
@@ -96,11 +96,11 @@
                 <div class="videoCar">
                     <a href=""><img class="thumbnail" src="images/thumbnail3.png" alt="thumbnail3"></a>
                     <div class="flexNavBar">
-                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills</a>
+                            <a href="">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
-                            <p>154k 1 month</p>
+                            <p>154k &bull; 1 month</p>
                         </div>
                     </div>
                 </div>
@@ -108,11 +108,11 @@
                 <div class="videoCar">
                     <a href=""><img class="thumbnail" src="images/thumbnail4.png" alt="thumbnail4"></a>
                     <div class="flexNavBar">
-                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills</a>
+                            <a href="">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
-                            <p>154k 1 month</p>
+                            <p>154k &bull; 1 month</p>
                         </div>
                     </div>
                 </div>
@@ -120,11 +120,11 @@
                 <div class="videoCar">
                     <a href=""><img class="thumbnail" src="images/thumbnail5.png" alt="thumbnail5"></a>
                     <div class="flexNavBar">
-                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills</a>
+                            <a href="">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
-                            <p>154k 1 month</p>
+                            <p>154k &bull; 1 month</p>
                         </div>
                     </div>
                 </div>
@@ -132,11 +132,11 @@
                 <div class="videoCar">
                     <a href=""><img class="thumbnail" src="images/thumbnail6.png" alt="thumbnail6"></a>
                     <div class="flexNavBar">
-                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills</a>
+                            <a href="">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
-                            <p>154k 1 month</p>
+                            <p>154k &bull; 1 month</p>
                         </div>
                     </div>
                 </div>
@@ -144,11 +144,11 @@
                 <div class="videoCar">
                     <a href=""><img class="thumbnail" src="images/thumbnail7.png" alt="thumbnail7"></a>
                     <div class="flexNavBar">
-                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills</a>
+                            <a href="">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
-                            <p>154k 1 month</p>
+                            <p>154k &bull; 1 month</p>
                         </div>
                     </div>
                 </div>
@@ -156,11 +156,11 @@
                 <div class="videoCar">
                     <a href=""><img class="thumbnail" src="images/thumbnail8.png" alt="thumbnail8"></a>
                     <div class="flexNavBar">
-                        <a href=""><img src="images/Jack.png" alt="channel1"></a>
+                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills dfdvevcrfvfffdfjbfhbhsbfhbsh</a>
+                            <a href="">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
-                            <p>154k 1 month</p>
+                            <p>154k &bull; 1 month</p>
                         </div>
                     </div>
                 </div>
