--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navSection2 flexNavBar">
             <div class="searchBox flexNavBar">
                 <input type="text" placeholder="Search">
-                <img src="images/search.png" alt="searchIcon">
+                <img class="searchIcon" src="images/search.png" alt="searchIcon">
             </div>
             <img class="micIcon" src="images/voice-search.png" alt="voiceIcon">
         </div>
