--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             <!--* structure for the videos section -->
             <div class="videosContainer">
                 <div class="videoCar">
-                    <a href=""><img class="thumbnail" src="images/thumbnail1.png" alt="thumbnail1"></a>
+                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail1.png" alt="thumbnail1"></a>
                     <div class="flexNavBar">
                         <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills at backend development</a>
+                            <a href="index2.html">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
                             <p>154k &bull; 1 month</p>
                         </div>
@@ -82,11 +82,11 @@
                 </div>
 
                 <div class="videoCar">
-                    <a href=""><img class="thumbnail" src="images/thumbnail2.png" alt="thumbnail2"></a>
+                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail2.png" alt="thumbnail2"></a>
                     <div class="flexNavBar">
                         <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills at backend development</a>
+                            <a href="index2.html">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
                             <p>154k &bull; 1 month</p>
                         </div>
@@ -94,11 +94,11 @@
                 </div>
 
                 <div class="videoCar">
-                    <a href=""><img class="thumbnail" src="images/thumbnail3.png" alt="thumbnail3"></a>
+                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail3.png" alt="thumbnail3"></a>
                     <div class="flexNavBar">
                         <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills at backend development</a>
+                            <a href="index2.html">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
                             <p>154k &bull; 1 month</p>
                         </div>
@@ -106,11 +106,11 @@
                 </div>
 
                 <div class="videoCar">
-                    <a href=""><img class="thumbnail" src="images/thumbnail4.png" alt="thumbnail4"></a>
+                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail4.png" alt="thumbnail4"></a>
                     <div class="flexNavBar">
                         <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills at backend development</a>
+                            <a href="index2.html">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
                             <p>154k &bull; 1 month</p>
                         </div>
@@ -118,11 +118,11 @@
                 </div>
 
                 <div class="videoCar">
-                    <a href=""><img class="thumbnail" src="images/thumbnail5.png" alt="thumbnail5"></a>
+                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail5.png" alt="thumbnail5"></a>
                     <div class="flexNavBar">
                         <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills at backend development</a>
+                            <a href="index2.html">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
                             <p>154k &bull; 1 month</p>
                         </div>
@@ -130,11 +130,11 @@
                 </div>
 
                 <div class="videoCar">
-                    <a href=""><img class="thumbnail" src="images/thumbnail6.png" alt="thumbnail6"></a>
+                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail6.png" alt="thumbnail6"></a>
                     <div class="flexNavBar">
                         <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills at backend development</a>
+                            <a href="index2.html">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
                             <p>154k &bull; 1 month</p>
                         </div>
@@ -142,11 +142,11 @@
                 </div>
 
                 <div class="videoCar">
-                    <a href=""><img class="thumbnail" src="images/thumbnail7.png" alt="thumbnail7"></a>
+                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail7.png" alt="thumbnail7"></a>
                     <div class="flexNavBar">
                         <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills at backend development</a>
+                            <a href="index2.html">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
                             <p>154k &bull; 1 month</p>
                         </div>
@@ -154,11 +154,11 @@
                 </div>
 
                 <div class="videoCar">
-                    <a href=""><img class="thumbnail" src="images/thumbnail8.png" alt="thumbnail8"></a>
+                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail8.png" alt="thumbnail8"></a>
                     <div class="flexNavBar">
                         <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
                         <div class="videoInfo">
-                            <a href="">How to improve your coding skills at backend development</a>
+                            <a href="index2.html">How to improve your coding skills at backend development</a>
                             <p>midudev</p>
                             <p>154k &bull; 1 month</p>
                         </div>
