feat: 💄: Position for the main video

--- a/index2.html
+++ b/index2.html
@@ -26,5 +26,18 @@
             <img class="userIcon" src="images/userIcon.svg" alt="userIcon">
         </div>
     </nav>
+
+    <main class="mainContent videoPosition">
+        <div class="row">
+            <div class="play-video">
+                <video controls src="./videos/video.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="rigth-sidebar">
+                
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
