feat: ✨: Video player and start calling an API

--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,14 @@
                 </video>
             </div>
             <div class="rigth-sidebar">
-                
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail4.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
