--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="main.js" defer></script>
+    <script src="api.js"></script>
     <title>YouTube</title>
 </head>
 <body>
