--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <main class="mainContent">
             <!--* Structure for the banner image -->
             <div class="bannerContainer">
-                <img src="./images/banner.png" alt="banner">
+                <!-- <img src="./images/banner.png" alt="banner"> -->
             </div>
 
             <!--* structure for the videos section -->
