Insert using a local API for the videos images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!--* Structure for subscribed channels  -->
             <div class="subscribedChanels">
                 <h3>SUBSCRIBED</h3>
-                <a class="simdeMenu" href=""><img src="images/Jack.png" alt="showMoreIcon"><p>Joker</p></a>
+                <a class="simdeMenu" href=""><img src="images/Jack.png" alt="showMoreIcon"><p>CreativeCode</p></a>
                 <a class="simdeMenu" href=""><img src="images/simon.png" alt="showMoreIcon"><p>Maradona</p></a>
                 <a class="simdeMenu" href=""><img src="images/tom.png" alt="showMoreIcon"><p>Tom Cruise</p></a>
                 <a class="simdeMenu" href=""><img src="images/megan.png" alt="showMoreIcon"><p>Megan Fox</p></a>
@@ -65,106 +65,12 @@
         <main class="mainContent">
             <!--* Structure for the banner image -->
             <div class="bannerContainer">
-                <!-- <img src="./images/banner.png" alt="banner"> -->
+                
             </div>
 
             <!--* structure for the videos section -->
             <div class="videosContainer">
-                <div class="videoCar">
-                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail1.png" alt="thumbnail1"></a>
-                    <div class="flexNavBar">
-                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
-                        <div class="videoInfo">
-                            <a href="index2.html">How to improve your coding skills at backend development</a>
-                            <p>midudev</p>
-                            <p>154k &bull; 1 month</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="videoCar">
-                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail2.png" alt="thumbnail2"></a>
-                    <div class="flexNavBar">
-                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
-                        <div class="videoInfo">
-                            <a href="index2.html">How to improve your coding skills at backend development</a>
-                            <p>midudev</p>
-                            <p>154k &bull; 1 month</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="videoCar">
-                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail3.png" alt="thumbnail3"></a>
-                    <div class="flexNavBar">
-                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
-                        <div class="videoInfo">
-                            <a href="index2.html">How to improve your coding skills at backend development</a>
-                            <p>midudev</p>
-                            <p>154k &bull; 1 month</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="videoCar">
-                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail4.png" alt="thumbnail4"></a>
-                    <div class="flexNavBar">
-                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
-                        <div class="videoInfo">
-                            <a href="index2.html">How to improve your coding skills at backend development</a>
-                            <p>midudev</p>
-                            <p>154k &bull; 1 month</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="videoCar">
-                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail5.png" alt="thumbnail5"></a>
-                    <div class="flexNavBar">
-                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
-                        <div class="videoInfo">
-                            <a href="index2.html">How to improve your coding skills at backend development</a>
-                            <p>midudev</p>
-                            <p>154k &bull; 1 month</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="videoCar">
-                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail6.png" alt="thumbnail6"></a>
-                    <div class="flexNavBar">
-                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
-                        <div class="videoInfo">
-                            <a href="index2.html">How to improve your coding skills at backend development</a>
-                            <p>midudev</p>
-                            <p>154k &bull; 1 month</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="videoCar">
-                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail7.png" alt="thumbnail7"></a>
-                    <div class="flexNavBar">
-                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
-                        <div class="videoInfo">
-                            <a href="index2.html">How to improve your coding skills at backend development</a>
-                            <p>midudev</p>
-                            <p>154k &bull; 1 month</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="videoCar">
-                    <a href="index2.html"><img class="thumbnail" src="images/thumbnail8.png" alt="thumbnail8"></a>
-                    <div class="flexNavBar">
-                        <a href=""><img class="profilePicture" src="images/Jack.png" alt="channel1"></a>
-                        <div class="videoInfo">
-                            <a href="index2.html">How to improve your coding skills at backend development</a>
-                            <p>midudev</p>
-                            <p>154k &bull; 1 month</p>
-                        </div>
-                    </div>
-                </div>
+        
             </div>
         </main>
 
