--- a/index2.html
+++ b/index2.html
@@ -34,8 +34,99 @@
                 </video>
             </div>
             <div class="rigth-sidebar">
+
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail1.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
+
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail2.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
+
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail3.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
+
                 <div class="videoList">
                     <a class="smallThumbnail" href=""><img src="./images/thumbnail4.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
+
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail5.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
+
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail6.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
+
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail7.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
+
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail8.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
+
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail1.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
+
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail2.png" alt="videoRecomendations"></a>
+                    <div class="videoInfo2">
+                        <a href=""><p>How to improve your coding skills at backend development</p></a>
+                        <p>midudev</p>
+                        <p>154k &bull; 1 month</p>
+                    </div>
+                </div>
+
+                <div class="videoList">
+                    <a class="smallThumbnail" href=""><img src="./images/thumbnail3.png" alt="videoRecomendations"></a>
                     <div class="videoInfo2">
                         <a href=""><p>How to improve your coding skills at backend development</p></a>
                         <p>midudev</p>
