--- a/index2.html
+++ b/index2.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>YouTube | Channel</title>
 </head>
 <body>
     <nav class="flexNavBar">
         <div class="navSection1 flexNavBar">
             <img class="menu" src="images/menu.png" alt="sideMenu">
-            <img class="youtubeLogo" src="images/youtubeLogo.png" alt="youtubeLogo">
+            <a href="index.html"><img class="youtubeLogo" src="images/youtubeLogo.png" alt="youtubeLogo"></a>
         </div>
         <div class="navSection2 flexNavBar">
             <div class="searchBox flexNavBar">
@@ -32,6 +33,17 @@
             <div class="play-video">
                 <video controls src="./videos/video.mp4" type="video/mp4">
                 </video>
+                <h3>Web Api NetCore Part22</h3>
+                <div class="playVideoInfo">
+                    <p>145k &bull; 3 weeks ago</p>
+                    <div>
+                        <a href=""><img src="images/like.png" alt="likeIcon">26 k</a>
+                        <a href=""><img src="images/dislike.png" alt="likeIcon"></a>
+                        <a href=""><img src="images/share.png" alt="likeIcon">Share</a>
+                        <a href=""><img src="images/save.png" alt="likeIcon">Save</a>
+                        <a class="downloads" ><i class='bx bx-download'></i>Download</a>
+                    </div>
+                </div>
             </div>
             <div class="rigth-sidebar">
 
