Continue video info

--- a/index2.html
+++ b/index2.html
@@ -45,6 +45,14 @@
                     </div>
                 </div>
                 <hr>
+                <div class="channelInfo">
+                    <img src="./images/Jack.png" alt="channelImage">
+                    <div>
+                        <p>CreativeCode</p>
+                        <span>492 subscribers</span>
+                        <button type="button">Subscribe</button>
+                    </div>
+                </div>
             </div>
             <div class="rigth-sidebar">
 
