--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>YouTube | Channel</title>
+    <script src="js/api.js"></script>
+    <script src="js/main.js"></script>
+    <title>YouTube | CreativeCode</title>
 </head>
 <body>
     <nav class="flexNavBar">
@@ -31,8 +33,7 @@
     <main class="mainContent videoPosition">
         <div class="row">
             <div class="play-video">
-                <video controls src="./videos/video.mp4" type="video/mp4">
-                </video>
+                <iframe width="1000" height="600" src="https://www.youtube.com/embed/izvodnnCvt0" title="M I L E S D A V I S - Kind Of Blue - Full Album" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h3>Web Api NetCore Part22</h3>
                 <div class="playVideoInfo">
                     <p>145k &bull; 3 weeks ago</p>
