--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="js/api.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/api.js" defer></script>
+    <!-- <script src="js/main.js"></script> -->
     <title>YouTube | CreativeCode</title>
 </head>
 <body>
