Styles and structure for the slide menu search

--- a/index.html
+++ b/index.html
@@ -20,8 +20,24 @@
             <div class="searchBox flexNavBar">
                 <input type="text" placeholder="Search">
                 <img class="searchIcon" src="images/search.png" alt="searchIcon">
+                <img class="micIcon" src="images/voice-search.png" alt="voiceIcon">
             </div>
-            <img class="micIcon" src="images/voice-search.png" alt="voiceIcon">
+            <!-- Structure for the slide menu search  -->
+            <div class="searchQuery">
+                <div id="active">
+                    <ul class="searchList">
+    
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="">
+            <div>
+                <ul>
+
+                </ul>
+            </div>
         </div>
         <div class="navSection3 flexNavBar">
             <img src="images/upload.png" alt="uploadVideo">
