Creating a function to use the navbar

--- a/index.html
+++ b/index.html
@@ -16,27 +16,25 @@
             <img class="menu" src="images/menu.png" alt="sideMenu">
             <img class="youtubeLogo" src="images/youtubeLogo.png" alt="youtubeLogo">
         </div>
-        <div class="navSection2 flexNavBar">
+        <div class="navSection2">
             <div class="searchBox flexNavBar">
-                <input type="text" placeholder="Search">
+                <input id="chartSearch" type="text" placeholder="Search">
                 <img class="searchIcon" src="images/search.png" alt="searchIcon">
                 <img class="micIcon" src="images/voice-search.png" alt="voiceIcon">
             </div>
             <!-- Structure for the slide menu search  -->
             <div class="searchQuery">
                 <div id="active">
-                    <ul class="searchList">
-    
+                    <ul id="searchList">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
                     </ul>
                 </div>
-            </div>
-        </div>
-
-        <div class="">
-            <div>
-                <ul>
-
-                </ul>
             </div>
         </div>
         <div class="navSection3 flexNavBar">
