feat: :sparkles: Adding API URL and adding a README.md

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="./js/main.js" defer></script>
+    <script type="module" src="js/main.js" defer></script>
+    <script type="module" src="js/searchFunction.js" defer></script>
     <title>YouTube</title>
 </head>
 <body>
@@ -26,13 +27,6 @@
             <div class="searchQuery">
                 <div id="active">
                     <ul id="searchList">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
                     </ul>
                 </div>
             </div>
