--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="js/api.js" defer></script>
+    <script type="module" src="js/api.js" defer></script>
+    <script type="module" src="js/searchFunction.js" defer></script>
     <title>YouTube | CreativeCode</title>
 </head>
 <body>
@@ -14,12 +15,19 @@
             <img class="menu" src="images/menu.png" alt="sideMenu">
             <a href="index.html"><img class="youtubeLogo" src="images/youtubeLogo.png" alt="youtubeLogo"></a>
         </div>
-        <div class="navSection2 flexNavBar">
+        <div class="navSection2">
             <div class="searchBox flexNavBar">
-                <input type="text" placeholder="Search">
+                <input id="chartSearch" type="text" placeholder="Search">
                 <img class="searchIcon" src="images/search.png" alt="searchIcon">
+                <img class="micIcon" src="images/voice-search.png" alt="voiceIcon">
             </div>
-            <img class="micIcon" src="images/voice-search.png" alt="voiceIcon">
+            <!-- Structure for the slide menu search  -->
+            <div class="searchQuery">
+                <div id="active">
+                    <ul id="searchList">
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="navSection3 flexNavBar">
             <img src="images/upload.png" alt="uploadVideo">
